--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
   <main>
     <div class="component">
       <div class="component_intro">
-        <h2 class="component_title">Learn to code by <br>watching others</h2>
+        <h1 class="component_title">Learn to code by <br>watching others</h1>
         <p>See how experienced developers solve problems in real-time. Watching scripted tutorials is great,
           but understanding how developers think is invaluable.</p>
       </div>
       <div class="component_signup">
         <p class="componentSignup_intro"><span class="componentSignup_intro-em">Try it free 7 days</span> then $20/mo.
           thereafter</p>
-        <form action="" class="componentSignup_card" name="signUp" novalidate>
+        <form class="componentSignup_card" name="signUp" novalidate>
           <div class="por">
             <input type="text" name="firstName" class="componentSignup_input" placeholder="First Name" autocomplete="off">
             <p class="componentSignup_inputErrMsg"></p>
